--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="logo-title" id="logo">ToDo<span>List</span></h1>
-      <h4>Desenvolvido por Giselle Ferreira</h4>
+      <h1 class="logo-title" id="logo">
+        ToDo<span>List</span>
+        <p>Desenvolvido por Giselle Ferreira</p>
+      </h1>
       <div id="new-task">
         <input type="text" placeholder="Nova Tarefa..." />
         <button id="add">Adicionar</button>
